fix wrong spacing

--- a/source/stylesheets/layout/_home.scss
+++ b/source/stylesheets/layout/_home.scss
@@ -37,12 +37,21 @@
     max-width: none;
   }
 }
+.home-hero-title-wrapper {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .home-hero-title {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 1.25rem;
+  text-align: center;
   font-size: rem-calc(36);
   line-height: rem-calc(44);
   @include susy-breakpoint($break-medium) {
-    @include span(10 of 12);
-    @include squish(1, 1);
+      max-width: 940px;
+      padding: 0;
   }
 }
 .home-hero-tech {
@@ -59,6 +68,12 @@
   top: 0;
   left: 0;
   right: 0;
+}
+
+.home-advantages {
+  .advantages-title {
+    display: none;
+  }
 }
 
 // Offer
@@ -144,6 +159,9 @@
 
   .technology-base-list {
     padding-top: rem-calc(100);
+    .callout-title {
+      min-height: initial;
+    }
     .callout-item {
       background-color: transparent;
     }
@@ -236,6 +254,10 @@
 
 .home-table-usps {
   width: 100%;
+  @include susy-breakpoint($break-medium) {
+    width: 60%;
+    margin: auto;
+  }
   flex: 1 auto;
   justify-content: space-around;
   display: flex;
